--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-bootstrap-icons": "^1.10.3",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
