--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --force",
-   "build": "vite build",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -18,6 +18,8 @@
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-payment-inputs": "^1.1.9",
+    "react-responsive": "^9.0.2",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
@@ -29,7 +31,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "react-router-dom": "^6.14.2",
-    "vite": "^4.4.5",
+    "vite": "^4.4.9",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
